fix(css): improve contrast of list-style-type

--- a/live-examples/css-examples/lists/list-style.css
+++ b/live-examples/css-examples/lists/list-style.css
@@ -4,7 +4,8 @@
 
 #example-element {
     width: 100%;
-    background: #f1f8ff30;
+    background: #be094b;
+    color: white;
 }
 
 .output section {
